# daily-summarizer

./: .env.example  .gitignore  Makefile  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  V2_VISION.md  v1.0-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v1.5.1-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
config/: config.yaml  priorities.yaml
docs/: cowork-setup.md  multi-version-platform-vision.md  re-auth-procedure.md  work-intelligence-architecture-questions.md  work-intelligence-decisions-context.md  work-intelligence-system-plan.md
src/: cache_cleanup.py  config.py  dedup.py  main.py  pipeline.py  pipeline_async.py  pipeline_progress.py  priorities.py  quality.py  retry.py  schema_utils.py  sidecar.py
templates/: daily.md.j2  entity_report.md.j2  monthly.md.j2  weekly.md.j2
tests/: test_api_summaries.py  test_attributor.py  test_backfill.py  test_cache_cleanup.py  test_calendar_ingest.py  test_config.py  test_dedup.py  test_discovery.py  test_drive_ingest.py  test_entity_cli.py  test_entity_migrations.py  test_entity_models.py  test_entity_normalizer.py  test_entity_repository.py  test_entity_views.py  test_extractor.py  test_extractor_async.py  test_gmail_ingest.py  test_gong_ingest.py  test_google_docs.py  test_hubspot_ingest.py  test_hubspot_xref.py  test_merger.py  test_models.py  test_monthly.py  test_normalizer.py  test_notifications.py  test_notion_discovery.py  test_notion_ingest.py  test_pipeline.py  test_pipeline_async.py  test_pipeline_attribution.py  (+11 more)
(+375 files in other folders)
