[project]
name = "daily-summarizer"
version = "0.1.0"
description = "Work intelligence pipeline: daily summaries from calendar, email, and meeting data"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.193.0,<3.0",
    "google-auth>=2.49.1,<3.0",
    "google-auth-httplib2>=0.3.1,<1.0",
    "google-auth-oauthlib>=1.3.1,<2.0",
    "httpx>=0.28.1,<1.0",
    "jinja2>=3.1.6,<4.0",
    "pydantic>=2.12.5,<3.0",
    "python-dateutil>=2.9.0.post0,<3.0",
    "pyyaml>=6.0.3,<7.0",
    "anthropic>=0.45.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "slack-sdk>=3.33.0,<4.0",
    "hubspot-api-client>=12.0.0,<13.0",
    "tenacity>=9.1.4",
    "rapidfuzz>=3.0,<4.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
